# 2D_Python_Renderer

./: CMakeLists.txt
include/: AABB.h  Camera.h  CollisionComponent.h  Component.h  GeomCollection.h  GeomFactory.h  GraphicsComponent.h  QuatVec.h  Shader.h  Util.h
scripts/: init.py
src/: AABB.cpp  Camera.cpp  CollisionComponent.cpp  GeomFactory.cpp  GraphicsComponent.cpp  PySource.cpp  QuatVec.cpp  Shader.cpp  main.cpp
